--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ exclude =
     */media/,
     */templates/,
     tests/,
-    */migrations/,
+    *migrations*,
     venv/,
     env/
 per-file-ignores =
