--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,7 +78,7 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          source: "./docker-compose.yaml, /.env, /nginx"
+          source: "./docker-compose.yaml, ./.env, ./nginx"
           target: "./app/"
 
       - name: executing remote ssh commands to deploy
