--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,9 +56,8 @@ jobs:
     steps:
     
       - name: whereami
-        run: |
-          pwd
-          ls
+        run: pwd && ls
+
         
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1
@@ -74,12 +73,13 @@ jobs:
           file_name: .env
           
       - name: whereami
-        run: |
-          pwd
-          ls
+        run: pwd && ls
           
       - uses: actions/checkout@master
-
+      
+          
+      - name: whereami
+        run: pwd && ls
 
       - name: copy docker-compose.yaml file to remote
         uses: appleboy/scp-action@master
@@ -90,6 +90,10 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           source: "./docker-compose.yaml, ./.env, ./nginx"
           target: "./app/"
+          
+          
+      - name: whereami
+        run: pwd && ls
 
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
