--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,57 +6,56 @@ on:
       - master
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
+#   tests:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Clone repository
-      uses: actions/checkout@v2
+#     steps:
+#     - name: Clone repository
+#       uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: 3.8
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install -r requirements.txt --no-cache-dir
-    - name: Lint with flake8
-      run: flake8 . --exclude tests,**/migrations
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install flake8 pytest
+#         pip install -r requirements.txt --no-cache-dir
+#     - name: Lint with flake8
+#       run: flake8 . --exclude tests,**/migrations
 
-  build_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
+#   build_and_push_to_docker_hub:
+#     name: Push Docker image to Docker Hub
+#     runs-on: ubuntu-latest
+#     needs: tests
+#     steps:
+#       - name: Check out the repo
+#         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v1
 
-      - name: Login to Docker
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+#       - name: Login to Docker
+#         uses: docker/login-action@v1
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
+#       - name: Push to Docker Hub
+#         uses: docker/build-push-action@v2
+#         with:
+#           push: true
+#           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
 
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
+#     needs: build_and_push_to_docker_hub
     steps:
     
-      - name: whereami
-        run: pwd && ls
+      - uses: actions/checkout@master
 
         
       - name: Make envfile
@@ -70,13 +69,8 @@ jobs:
           envkey_POSTGRES_PASSWORD: postgres
           envkey_DB_HOST: localhost
           envkey_DB_PORT: 5432
+          directory: ./
           file_name: .env
-          
-      - name: whereami
-        run: pwd && ls
-          
-      - uses: actions/checkout@master
-      
           
       - name: whereami
         run: pwd && ls
