--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
           envkey_POSTGRES_PASSWORD: postgres
           envkey_DB_HOST: localhost
           envkey_DB_PORT: 5432
-          directory: ${{ secrets.GITHUB_WORKSPACE }}
+          directory: '/home/runner/work/foodgram-project/foodgram-project'
           
       - name: whereami
         run: pwd && ls ../ && ls
