--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,72 +6,56 @@ on:
       - master
 
 jobs:
-#   tests:
-#     runs-on: ubuntu-latest
+  tests:
+    runs-on: ubuntu-latest
 
-#     steps:
-#     - name: Clone repository
-#       uses: actions/checkout@v2
+    steps:
+    - name: Clone repository
+      uses: actions/checkout@v2
 
-#     - name: Set up Python
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: 3.8
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
 
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install flake8 pytest
-#         pip install -r requirements.txt --no-cache-dir
-#     - name: Lint with flake8
-#       run: flake8 . --exclude tests,**/migrations
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        pip install -r requirements.txt --no-cache-dir
+    - name: Lint with flake8
+      run: flake8 . --exclude tests,**/migrations
 
-#   build_and_push_to_docker_hub:
-#     name: Push Docker image to Docker Hub
-#     runs-on: ubuntu-latest
-#     needs: tests
-#     steps:
-#       - name: Check out the repo
-#         uses: actions/checkout@v2
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
 
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-#       - name: Login to Docker
-#         uses: docker/login-action@v1
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-#       - name: Push to Docker Hub
-#         uses: docker/build-push-action@v2
-#         with:
-#           push: true
-#           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
 
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-#     needs: build_and_push_to_docker_hub
+    needs: build_and_push_to_docker_hub
     steps:
     
       - uses: actions/checkout@master
-   
-      - name: Make envfile
-        uses: SpicyPizza/create-envfile@v1
-        with:
-          envkey_DEBUG: 0  # change to 1 for Debug mode
-          envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          envkey_ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
-          envkey_POSTGRES_DB: postgres
-          envkey_POSTGRES_USER: postgres
-          envkey_POSTGRES_PASSWORD: postgres
-          envkey_DB_HOST: localhost
-          envkey_DB_PORT: 5432
-          directory: '/home/runner/work/foodgram-project/foodgram-project'
-          
-      - name: whereami
-        run: pwd && ls ../ && ls
 
       - name: copy docker-compose.yaml file to remote
         uses: appleboy/scp-action@master
@@ -80,11 +64,21 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          source: "./docker-compose.yaml, ./.env, ./nginx"
+          source: "./docker-compose.yaml, ./nginx"
           target: "./app/"
 
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
+        env:
+          DEBUG: 0  # change to 1 for Debug mode
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
+          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          DB_HOST: localhost
+          DB_PORT: 5432
+          
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
