--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream foodgram {
+upstream web {
     server web:8000;
 }
 
@@ -7,7 +7,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://foodgram;
+        proxy_pass http://web;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
@@ -17,5 +17,8 @@ server {
         alias /app/web/static/;
     }
 
+    location /media/ {
+        alias /app/media/;
+    }
 
 }
