--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,7 @@ upstream web {
 server {
 
     listen 80;
-    server_name localhost 127.0.0.1 178.154.244.166
+    server_name localhost 127.0.0.1 178.154.244.166;
 
     location / {
         proxy_pass http://web;
