--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,9 @@
-upstream web {
-    server web:8000;
-}
-
 server {
-
-    listen 80;
+    listen  80 default_server;
+    server_tokens off;
 
     location / {
-        proxy_pass http://web;
+        proxy_pass http://web:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
