--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - .env
 
   web:
     image: khmaker/foodgram:latest
@@ -17,6 +19,8 @@ services:
     volumes:
       - static:/app/web/static
       - media:/app/web/media
+    env_file:
+      - .env
 
   nginx:
     image: nginx:1.19-alpine
