--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,15 +76,16 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd app/
+            rm .env
             touch .env
             echo DEBUG='1' > .env
-            echo SECRET_KEY='${{ secrets.SECRET_KEY }}' > .env
-            echo ALLOWED_HOSTS='${{ secrets.ALLOWED_HOSTS }}' > .env
-            echo POSTGRES_DB='postgres' > .env
-            echo POSTGRES_USER='postgres' > .env
-            echo POSTGRES_PASSWORD='postgres' > .env
-            echo DB_HOST='db' > .env
-            echo DB_PORT='5432' > .env
+            echo SECRET_KEY='${{ secrets.SECRET_KEY }}' >> .env
+            echo ALLOWED_HOSTS='${{ secrets.ALLOWED_HOSTS }}' >> .env
+            echo POSTGRES_DB='postgres' >> .env
+            echo POSTGRES_USER='postgres' >> .env
+            echo POSTGRES_PASSWORD='postgres' >> .env
+            echo DB_HOST='db' >> .env
+            echo DB_PORT='5432' >> .env
             docker-compose down
             docker pull khmaker/foodgram:latest
             docker-compose up -d
