--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,14 +78,15 @@ jobs:
             cd app/
             rm .env
             touch .env
-            echo DEBUG='1' > .env
-            echo SECRET_KEY='${{ secrets.SECRET_KEY }}' >> .env
-            echo ALLOWED_HOSTS='${{ secrets.ALLOWED_HOSTS }}' >> .env
-            echo POSTGRES_DB='postgres' >> .env
-            echo POSTGRES_USER='postgres' >> .env
-            echo POSTGRES_PASSWORD='postgres' >> .env
-            echo DB_HOST='db' >> .env
-            echo DB_PORT='5432' >> .env
+            cat <<tmp >> .env
+            DEBUG='0'
+            echo SECRET_KEY='${{ secrets.SECRET_KEY }}'
+            echo ALLOWED_HOSTS='${{ secrets.ALLOWED_HOSTS }}'
+            echo POSTGRES_DB='${{ secrets.POSTGRES_DB }}'
+            echo POSTGRES_USER='${{ secrets.POSTGRES_USER }}'
+            echo POSTGRES_PASSWORD='${{ secrets.POSTGRES_PASSWORD }}'
+            echo DB_HOST='${{ secrets.DB_HOST }}'
+            echo DB_PORT='${{ secrets.DB_PORT }}'
             docker-compose down
             docker pull khmaker/foodgram:latest
             docker-compose up -d
