--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ gunicorn==20.0.4
 mccabe==0.6.1
 names==0.3.0
 numpy==1.20.1
-Pillow==8.1.0
+Pillow>=8.1.1
 psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pyflakes==2.2.0
