--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-asgiref==3.3.1
-autopep8==1.5.5
-Django==3.2.6
-djangorestframework==3.12.2
-flake8==3.8.4
-gunicorn==20.0.4
+asgiref==3.4.1
+autopep8==1.5.7
+Django==3.2.7
+djangorestframework==3.12.4
+flake8==3.9.2
+gunicorn==20.1.0
 mccabe==0.6.1
 names==0.3.0
 numpy==1.20.1
-Pillow>=8.1.1
+Pillow==8.3.2
 psycopg2-binary==2.8.6
-pycodestyle==2.6.0
-pyflakes==2.2.0
-python-dotenv==0.15.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+python-dotenv==0.19.0
 pytz==2021.1
 sorl-thumbnail==12.7.0
 sqlparse==0.4.2
