--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 asgiref==3.4.1
 autopep8==1.5.7
-Django==3.2.7
+Django==3.2
 djangorestframework==3.12.4
 flake8==3.9.2
 gunicorn==20.1.0
 mccabe==0.6.1
 names==0.3.0
 numpy==1.20.1
-Pillow==8.3.2
+Pillow>=9.0
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pyflakes==2.3.1
