--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 asgiref==3.4.1
 autopep8==1.5.7
-Django==3.2
+Django>=3.2.11
 djangorestframework==3.12.4
 flake8==3.9.2
 gunicorn==20.1.0
 mccabe==0.6.1
 names==0.3.0
-numpy==1.20.1
+numpy>=1.21
 Pillow>=9.0
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
